--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: "0,6,12,18 * * *"
+    - cron: "0 1,5,9,13,17,21 * * *"
 
 jobs:
   autogreen:
